Started hero page

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,14 @@
 							gold: "#f3bf6c",
 							pink: "#fce3db",
 						},
+
+						screens: {
+							smApple: "420px",
+							sm: "481px",
+							md: "780px",
+							lg: "1024px",
+							xl: "1280px",
+						},
 					},
 				},
 			};
