Finished about page

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
 		<link rel="stylesheet" href="./css/style.css" />
 		<link href="./css/hamburgers.css" rel="stylesheet" />
 
-		<title><%= htmlWebpackPlugin.options.title %></title>
+		<!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+		<title>Portfolio | Đorđe Nešković</title>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<script>
 			tailwind.config = {
@@ -23,6 +24,7 @@
 							black: "#212121",
 							gold: "#f3bf6c",
 							pink: "#fce3db",
+							grey: "#4d4d4d",
 						},
 
 						screens: {
