Finished About Section

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 		<link rel="stylesheet" href="./css/style.css" />
 		<link href="./css/hamburgers.css" rel="stylesheet" />
+		<link
+			href="https://unpkg.com/aos@2.3.1/dist/aos.css"
+			rel="stylesheet"
+		/>
 
 		<!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
 		<title>Portfolio | Đorđe Nešković</title>
@@ -49,5 +53,7 @@
 		</noscript>
 		<div id="app"></div>
 		<!-- built files will be auto injected -->
+
+		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	</body>
 </html>
