--- a/public/index.html
+++ b/public/index.html
@@ -55,5 +55,9 @@
 		<!-- built files will be auto injected -->
 
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+		<script
+			src="https://kit.fontawesome.com/2af363a9d9.js"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
