--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,13 @@
 			name="viewport"
 			content="width=device-width,initial-scale=1.0"
 		/>
-		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+		<!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico" /> -->
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon.png"
+		/>
 		<link rel="stylesheet" href="./css/style.css" />
 		<link href="./css/hamburgers.css" rel="stylesheet" />
 		<link
